test/should_pass/dot_002.grg
actions dot_002 using attrib_model_001;

rule r {
	pattern {
		.-->.;
		.<--.-->.;
		.;
		.-->.<--.;
		-->.<--;
		.-->.<--;
		-->.<--.;
		-->.-->.-->;
		<--.<--.<--;
	}
	replace {
		.-->.<--.;
		.;
		.;
		.<--.;
		.<-:Edge-.;
		.- e:EINT ->.;
		eval {
			e.a = 42 + e.a;
		}
	}
}

