test/should_fail/enum_008.grg
using attrib_model_001, enum_model_003;

rule r {
	pattern {
		x:NINT - l:B -> k:A;
	}
	modify{
		eval { x.a = (k.e == te2::u) ? 0 : 1; }
	}
}
